--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <script src="script.js"></script>
     <h1>Hello World</h1>
     <h3>This is HTML page</h3>
+    <a href="media.html" target="_blank">Media File</a>
 </body>
 </html>
